# CodeAlpha_TaskFlow

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PROJECT_INFO.md  Procfile  README.md  RELEASE_NOTES.md  app.py  config.py  database.sql  deployment_report.md  forms.py  models.py  pyproject.toml  render.yaml  requirements.txt  vercel.json  wsgi.py
.github/workflows/: ci.yml
RELEASE/: CHANGELOG.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  RELEASE_NOTES.md
docs/: accessibility_report.md  codealpha_submission.md  final_performance_report.md  final_security_audit.md  interview_questions.md  linkedin_post.md  performance_report.md  production_certificate.md  project_certificate.md  project_metrics.md  project_stats.md  resume_description.md  security_audit.md
routes/: auth.py  notifications.py  projects.py  socket_events.py  tasks.py
scripts/: backup_db.py  deploy_check.py  reset_database.py  seed_demo_data.py
static/: manifest.json  service-worker.js
static/css/: style.css
static/js/: kanban.js  main.js  (+1 more)
templates/: 403.html  404.html  500.html  base.html  create_project.html  create_task.html  dashboard.html  edit_project.html  edit_task.html  error.html  index.html  kanban.html  login.html  notifications.html  project_detail.html  project_members.html  projects.html  register.html  search_results.html  task_detail.html
tests/: auth_test.py  comment_test.py  db_test.py  final_e2e_test.py  integration_test.py  kanban_test.py  notification_test.py  project_test.py  search_test.py  socketio_test.py  task_test.py  test_create_task.py
